// Original file: proto/tickets.proto

import type { AgregatedResponse as _ticketsPackage_AgregatedResponse, AgregatedResponse__Output as _ticketsPackage_AgregatedResponse__Output } from '../ticketsPackage/AgregatedResponse';

export interface AgregatedResponses {
  'results'?: (_ticketsPackage_AgregatedResponse)[];
}

export interface AgregatedResponses__Output {
  'results'?: (_ticketsPackage_AgregatedResponse__Output)[];
}
